[package]
name = "komari-tgbot"
version = "0.0.5"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler", "macros"] }
log = { version = "0.4.28", features = ["std"] }
simple_logger = { version = "5.0.0", features = ["colored", "colors", "stderr"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "__rustls-ring"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "macros"] }
serde = { version = "1.0.227", default-features = false, features = ["std"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
axum = { version = "0.8.4", default-features = false, features = ["tokio", "macros", "http1"] }
uuid = { version = "1.18.1", default-features = false, features = ["std", "v4"] }
urlencoding = "2.1.3"
regex = "1.11.1"

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false, strip = true, debug-assertions = false, overflow-checks = false }